# frontend/src/api/openapi.json
@@ -914,6 +914,22 @@
           "caption": {
             "$ref": "#/components/schemas/CompositionCaption"
           },
+          "cell_formats": {
+            "items": {
+              "anyOf": [
+                {
+                  "pattern": "^(original|[1-9][0-9]{0,3}:[1-9][0-9]{0,3})$",
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ]
+            },
+            "maxItems": 32,
+            "title": "Cell Formats",
+            "type": "array"
+          },
           "detached": {
             "default": false,
             "title": "Detached",
@@ -1071,6 +1087,28 @@
                 "type": "null"
               }
             ]
+          },
+          "cell_formats": {
+            "anyOf": [
+              {
+                "items": {
+                  "anyOf": [
+                    {
+                      "pattern": "^(original|[1-9][0-9]{0,3}:[1-9][0-9]{0,3})$",
+                      "type": "string"
+                    },
+                    {
+                      "type": "null"
+                    }
+                  ]
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Cell Formats"
           },
           "format": {
             "anyOf": [
